# pipeline

./: CMakeLists.txt  README.md
examples/: complex_source.cpp  from_vector.cpp  simple_calculation.cpp
src/: as_pipeline.h  binding.h  filter.h  from.h  function_filter.h  function_queue.h  generic_filter.h  pipeline.cpp  pipeline.h  sink.h  sink_binding.h  source.h  source_binding.h
